# scade-design-rules

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml
doc/: Makefile  make.bat
doc/_templates/: category.rst  content.rst  metric.rst  rule.rst
doc/changelog.d/: 1.added.md  10.maintenance.md  11.documentation.md  12.maintenance.md  13.dependencies.md  14.test.md  16.test.md  17.added.md  18.documentation.md  19.test.md  2.maintenance.md  21.documentation.md  23.dependencies.md  31.added.md  34.miscellaneous.md  35.miscellaneous.md  4.dependencies.md  5.dependencies.md  51.maintenance.md  52.maintenance.md  54.maintenance.md  6.test.md  7.maintenance.md  8.maintenance.md  9.dependencies.md
doc/source/: changelog.rst  conf.py  contributing.rst  disclaimer.rst  examples.rst  index.rst  links.rst
doc/source/_ext/: sdr.py
doc/source/design/: documentation.rst  examples.rst  index.rst  metrics.rst  repository.rst  rules.rst  tests.rst  utils.rst
doc/source/getting-started/: index.rst  requirements.rst  user-guide.rst  user.rst
doc/source/metrics/: index.rst  level_of_packages.rst  number_of_diagrams_per_element.rst  number_of_nested_activate_blocks.rst  (+5 more)
tests/: conftest.py  debug.py  test_metadata.py
tests/annotations/: test_ann_note_connected_data_for_public_interface.py  test_ann_notes_for_basic_datatypes_in_structures.py  test_ann_notes_for_basic_interface_types.py  test_ann_notes_for_named_types_or_variables.py  test_ann_notes_present_and_not_empty.py  test_identical_for_producer_consumer.py
tests/case/: test_enum_has_default_case.py
tests/diagrams/: test_elements_within_area.py
tests/examples/: test_examples.py
tests/metrics/: test_level_of_packages.py  test_number_of_diagrams_per_element.py  test_number_of_nested_activate_blocks.py  test_number_of_nested_sms.py  test_number_of_operators_per_package.py  test_number_of_outgoing_transitions_per_state.py  test_number_of_predef_ops_in_diagram.py  test_number_of_user_ops_in_diagram.py
tests/modelling/: test_forbidden_real_comparisons.py  test_no_anonymous_type.py  test_no_literals.py  test_no_pointer_branch.py  test_pragma_manifest.py  test_scope_of_locals.py
tests/naming/: test_camel_case_naming.py  test_forbidden_keywords.py  test_name_struct_diagram.py  test_name_struct_package.py  test_name_structure_fold_accumulator.py  test_name_structure_iterator_continue.py  test_name_structure_iterator_index.py  test_pascal_case_naming.py  test_upper_case_naming.py  utils.py
tests/project_structure/: test_no_scade_library.py
tests/readability/: test_line_crossing.py  test_local_name_uniqueness.py
tests/structure/: test_maximum_call_graph_depth.py  test_maximum_diagrams_per_element.py  test_maximum_level_of_packages.py  test_maximum_nested_activate_blocks.py  test_maximum_nested_sms.py  test_maximum_operators_per_package.py  test_maximum_outgoing_transitions_per_state.py  test_maximum_predef_ops_in_diagram.py  test_maximum_user_ops_in_diagram.py  test_number_of_diagrams_per_element.py  test_number_of_level_of_packages.py  test_number_of_nested_activate_blocks.py  test_number_of_nested_sms.py  test_number_of_operators_per_package.py  test_number_of_outgoing_transitions_per_state.py  test_number_of_predef_ops_in_diagram.py  test_number_of_user_ops_in_diagram.py
tests/traceability/: conftest.py  test_all_in_eq_set.py  test_eq_in_eq_set.py  test_eq_in_eq_set_or_net.py  test_eq_set_has_eqs.py  test_eq_set_not_empty.py  test_llr_architecture.py  test_llr_nature.py  test_llr_nature_eqs.py  test_llr_only.py  test_llr_only_eqs.py  test_llr_or_net_nature.py  test_llr_or_net_only.py
tests/utils/: test_accept_kind.py  test_annotations.py  test_command.py  test_get_closest_annotatable.py  test_get_iter_role.py  test_rule.py  utils.py
tools/check_doc/: update_doc.py
tools/check_models/: check_models.py
version/: index.html
version/0.1/: changelog.html  contributing.html  disclaimer.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/0.2/: changelog.html  examples.html  index.html  searchindex.js
version/0.3/: index.html
version/dev/: changelog.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/stable/: changelog.html  examples.html  genindex.html  index.html  objects.inv  search.html
(+1603 files in other folders)
